2012-03-11 Roman
- UI.VCAEngine: Context help for type "Full video" of primitive "Media" is updated.


2012-03-09 Roman
- !!!!:TVal, DAQ.BlockCalc, DAQ.JavaLikeCalc, DAQ.LogicLev, DAQ.ModBus, DAQ.Siemens, UI.VCAEngine:
    Object type support for values is added. Using for all is enabled.
- !!!!:SYS: Objects backward serialization is added to objects TVarObj, TArrayObj and XMLNodeObj.
    Object backward serialization enabled for TVariant, TVal, TValFunc, UI.VCAEngine.Widget
    and allow save and load it to DB.
- TFunction: Resource enable for access to object values into TValFunc.
- TElem: Types conversion function is added to TFld object.
- UI.QTCfg: Partial tree update for select item is added on page update command (F5).


2012-03-07 Roman
- DAQ.Siemens: ISO_TCP243 variant for CP243 (on S7-200) support is added.
- UI.VCAEngine: Separated attributes list request is added to service request "get /serv/attr".
- UI.Vision: Single attribute (no active) set is made on attribute change from attributes inspector.


2012-03-06 Roman
- FIX:UI.Vision: Crash on recursion MouseRelease event process into development mode for primitive "ElFigure",
    on ScrollArea events filter after change QWorkspace to QMdiArea, is fixed.
- UI.VCAEngine, UI.Vision: New type "Full video" is added to primitive "Media".
    Type "Full video" is realised by help Phonon engine into UI.Vision.
- SYS: No execution mode is added to TCntrNode::nodeAt().
- UI.QTStarter: Application name for QT is set to PACKAGE_STRING.
- FIX:UI.VCAEngine: Limit to loaded file resources through VCAEngine is set to 100MB.
- FIX:UI.Vision, UI.WebVision: Limit to trends buffer into primitive "Diagram" is fixed for valsForPix use.


2012-03-04 Roman
- !!!!:SYS: Threadsafe in generic is made for user API objects and individual for: TVarObj, TArrayObj and XMLNodeObj.
    Automatic resource free is added to AutoHD on true return from AHDDisConnect().


2012-02-29 Roman